# TSI-programming

Laboratorijas_Darbs_N1_solution/: Laboratorijas_Darbs_N1_solution.sln
Laboratorijas_Darbs_N1_solution/Laboratorijas_Darbs_N1_project/: Laboratorijas_Darbs_N1_project.vcxproj  main.cpp
Laboratorijas_Darbs_N1_solution/Laboratorijas_Darbs_N1_project/Debug/: Laboratorijas_Darbs_N1_project.exe.recipe  Laboratorijas_Darbs_N1_project.ilk  vc142.idb
Laboratorijas_Darbs_N1_solution/Laboratorijas_Darbs_N1_project/Debug/Laborato.323c801c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laboratorijas_Darbs_N1_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticeN1_part1_1_solution/: PracticeN1_part1_1_solution.sln
PracticeN1_part1_1_solution/PracticeN1_part1_1_project/: PracticeN1_part1_1_project.vcxproj  main.cpp
PracticeN1_part1_1_solution/PracticeN1_part1_1_project/Debug/: PracticeN1_part1_1_project.exe.recipe  PracticeN1_part1_1_project.ilk  vc142.idb
PracticeN1_part1_1_solution/PracticeN1_part1_1_project/Debug/Practice.2acf987a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticeN1_part1_1_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticeN1_part1_2_solution/: PracticeN1_part1_2_solution.sln
PracticeN1_part1_2_solution/PracticeN1_part1_2_project/: PracticeN1_part1_2_project.vcxproj  main.cpp
PracticeN1_part1_2_solution/PracticeN1_part1_2_project/Debug/: PracticeN1_part1_2_project.exe.recipe  PracticeN1_part1_2_project.ilk  vc142.idb
PracticeN1_part1_2_solution/PracticeN1_part1_2_project/Debug/Practice.961fdfa2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticeN1_part1_2_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticeN1_part2_1_solution/: PracticeN1_part2_1_solution.sln
PracticeN1_part2_1_solution/PracticeN1_part2_1_project/: PracticeN1_part2_1_project.vcxproj  main.cpp
PracticeN1_part2_1_solution/PracticeN1_part2_1_project/Debug/: PracticeN1_part2_1_project.exe.recipe  PracticeN1_part2_1_project.ilk  vc142.idb
PracticeN1_part2_1_solution/PracticeN1_part2_1_project/Debug/Practice.741e2ddd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticeN1_part2_1_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticeN1_part2_2_solution/: PracticeN1_part2_2_solution.sln
PracticeN1_part2_2_solution/PracticeN1_part2_2_project/: PracticeN1_part2_2_project.vcxproj  main.cpp
PracticeN1_part2_2_solution/PracticeN1_part2_2_project/Debug/: PracticeN1_part2_2_project.exe.recipe  PracticeN1_part2_2_project.ilk  vc142.idb
PracticeN1_part2_2_solution/PracticeN1_part2_2_project/Debug/Practice.d98411de.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
PracticeN1_part2_3_solution/: PracticeN1_part2_3_solution.sln
PracticeN1_part2_3_solution/PracticeN1_part2_3_project/: PracticeN1_part2_3_project.vcxproj  main.cpp
PracticeN1_part2_3_solution/PracticeN1_part2_3_project/Debug/: PracticeN1_part2_3_project.exe.recipe  PracticeN1_part2_3_project.ilk  vc142.idb
Practice_Conditional_Branching/: CMakeLists.txt  Tasks.md  main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main2.cpp  main20.cpp  main21.cpp  main22.cpp  main23.cpp  main24.cpp  main25.cpp  main26.cpp  main27.cpp  main28.cpp  main29.cpp  main3.cpp  main30.cpp  main31.cpp  main32.cpp  main33.cpp  main34.cpp  main35.cpp  main36.cpp  main37.cpp  main38.cpp  main39.cpp  main4.cpp  main40.cpp  main41.cpp  main42.cpp  main43.cpp  (+7 more)
Practice_Loops/: CMakeLists.txt  Tasks.md  main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main2.cpp  main20.cpp  main21.cpp  main22.cpp  main23.cpp  main24.cpp  main25.cpp  main26.cpp  main27.cpp  main28.cpp  main29.cpp  main3.cpp  main30.cpp  main31.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
(+7 files in other folders)
