cmake_minimum_required(VERSION 3.29)
project(Practice_Conditional_Branching)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1 main1.cpp)
add_executable(Task2 main2.cpp)
add_executable(Task3 main3.cpp)
add_executable(Task4 main4.cpp)
add_executable(Task5 main5.cpp)
add_executable(Task6 main6.cpp)
add_executable(Task7 main7.cpp)
add_executable(Task8 main8.cpp)
add_executable(Task9 main9.cpp)
add_executable(Task10 main10.cpp)
add_executable(Task11 main11.cpp)
add_executable(Task12 main12.cpp)
add_executable(Task13 main13.cpp)
add_executable(Task14 main14.cpp)
add_executable(Task15 main15.cpp)
add_executable(Task16 main16.cpp)
add_executable(Task17 main17.cpp)
add_executable(Task18 main18.cpp)
add_executable(Task19 main19.cpp)
add_executable(Task20 main20.cpp)
add_executable(Task21 main21.cpp)
add_executable(Task22 main22.cpp)
add_executable(Task23 main23.cpp)
add_executable(Task24 main24.cpp)
add_executable(Task25 main25.cpp)
add_executable(Task26 main26.cpp)
add_executable(Task27 main27.cpp)
add_executable(Task28 main28.cpp)
add_executable(Task29 main29.cpp)
add_executable(Task30 main30.cpp)
add_executable(Task31 main31.cpp)
add_executable(Task32 main32.cpp)
add_executable(Task33 main33.cpp)
add_executable(Task34 main34.cpp)
add_executable(Task35 main35.cpp)
add_executable(Task36 main36.cpp)
add_executable(Task37 main37.cpp)
add_executable(Task38 main38.cpp)
add_executable(Task39 main39.cpp)
add_executable(Task40 main40.cpp)
add_executable(Task41 main41.cpp)
add_executable(Task42 main42.cpp)
add_executable(Task43 main43.cpp)
add_executable(Task44 main44.cpp)
add_executable(Task45 main45.cpp)
