cmake_minimum_required(VERSION 3.29)
project(Practice_Loops)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1 main1.cpp)
add_executable(Task2 main2.cpp)
add_executable(Task3 main3.cpp)
add_executable(Task4 main4.cpp)
add_executable(Task5 main5.cpp)
add_executable(Task6 main6.cpp)
add_executable(Task7 main7.cpp)
add_executable(Task8 main8.cpp)
add_executable(Task9 main9.cpp)
add_executable(Task10 main10.cpp)
add_executable(Task11 main11.cpp)
add_executable(Task12 main12.cpp)
add_executable(Task13 main13.cpp)
add_executable(Task14 main14.cpp)
add_executable(Task15 main15.cpp)
